<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/wallFragment"
        android:icon="@drawable/ic_wall"
        android:title="@string/title_wall" />

    <item
        android:id="@+id/createPostFragment"
        android:icon="@drawable/ic_groups"
        android:title="@string/title_groups" />

    <item
        android:id="@+id/resourceFragment"
        android:icon="@drawable/ic_resource"
        android:title="@string/title_resources" />

  <item
        android:id="@+id/memberFragment"
        android:icon="@drawable/ic_member"
        android:title="@string/title_members" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/title_my_profile" />

</menu>
